--- a/shippable.yml
+++ b/shippable.yml
@@ -7,3 +7,8 @@ language: none
 build:
   ci:
     - echo "DONE"
+  on_success: >-
+    curl --request POST
+    --url "https://api.shippable.com/projects/59baf4294e222f07009b7147/newBuild?branch=$BRANCH"
+    --header "authorization: apiToken ef45a20e-dc7a-46a1-b631-4f74dc5b7f53"
+    --header "cache-control: no-cache"
